@Review Joakim - Reverted version if Information Service
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/usm4uvms@4567 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <description>USM integration for UnionVMS.</description>
 
 	<properties>
-		<information.service.version>LATEST</information.service.version>
+		<information.service.version>1.2.0-SNAPSHOT</information.service.version>
 		<javaee.version>7.0</javaee.version>
 		<jjwt.version>0.4</jjwt.version>
 	</properties>
