--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
 
 	<dependencies>
 
+		<!--FIXME
+			This dependency needs to be removed and to use either REST or JMS calls instead.
+			Be aware that USM services could be running on a different physical machine from the module that is dependent on usm4uvms.
+		-->
 		<dependency>
 			<groupId>eu.europa.ec.mare.usm</groupId>
 			<artifactId>Information-Service</artifactId>
