improving the ModuleInitializerBean
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/usm4uvms@5093 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,6 @@
 module.name=TEST_APP
 
 #USM related properties
-usm.deplyment.descriptor.force-update=true
+usm.deployment.descriptor.force-update=true
 usm.rest.server=http://localhost:8080
 usm.admin.rest.username=usm_bootstrap
