introduce datasets into the current session
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/usm4uvms@6150 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -187,11 +187,11 @@
 		</dependency>
 
 		<!-- to be removed since we will use user-model instead-->
-		<dependency>
+		<!--<dependency>
 			<groupId>eu.europa.ec.mare.usm</groupId>
 			<artifactId>Information-Service</artifactId>
 			<version>${information.service.version}</version>
-		</dependency>
+		</dependency>-->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
