Upgraded user-module dependency version to 1.1.0-SNAPSHOT.
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/usm4uvms@6275 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <release.branch.name>salome</release.branch.name>
-        <user.service.version>1.0.1</user.service.version>
+        <user.service.version>1.1.0-SNAPSHOT</user.service.version>
 		<information.service.version>1.6.0</information.service.version>
         <javaee.version>7.0</javaee.version>
         <jjwt.version>0.4</jjwt.version>
