--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,11 @@
                 <artifactId>lombok</artifactId>
         </dependency>-->
 
-        <!--<dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-        </dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -222,7 +223,6 @@
             <artifactId>uvms-commons</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
-
     </dependencies>
 	
     <build>
