--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,18 @@
     <groupId>eu.europa.ec.mare.usm</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.12-SNAPSHOT</version>
+    <version>0.0.13-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
     <properties>
         <release.branch.name>salome</release.branch.name>
         <user.service.version>1.1.0-SNAPSHOT</user.service.version>
-        <information.service.version>1.6.0</information.service.version>
+        <information.service.version>1.7.2</information.service.version>
         <javaee.version>7.0</javaee.version>
         <jjwt.version>0.4</jjwt.version>
         <uvms.commons.version>1.4-SNAPSHOT</uvms.commons.version>
+        <ehcache.version>2.10.1</ehcache.version>
     </properties>
 
     <distributionManagement>
@@ -34,7 +35,11 @@
     </scm>
 
     <dependencies>
-
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
         <!--	<dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>uvms-commons</artifactId>
