the default application option setters and getters are fixed
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/usm4uvms@7180 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/src/test/webapp/WEB-INF/web.xml
+++ b/src/test/webapp/WEB-INF/web.xml
@@ -21,6 +21,6 @@
 
 	<context-param>
 		<param-name>usmApplication</param-name>
-		<param-value>TEST_APP</param-value>
+		<param-value>Reporting</param-value>
 	</context-param>
 </web-app>
