--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/releases/${release.branch.name}/Libraries/usm4uvms</connection>
+        <connection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/usm4uvms</connection>
     </scm>
 
     <dependencies>
