--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
     <properties>
-        <release.branch.name><!-- INSERT BRANCH NAME --></release.branch.name>
+        <release.branch.name>uvms-1.0.3-auto-test</release.branch.name>
         <user.service.version>1.2.0</user.service.version>
         <information.service.version>1.8.0</information.service.version>
         <javaee.version>7.0</javaee.version>
@@ -57,22 +57,11 @@
             <artifactId>ehcache</artifactId>
             <version>${ehcache.version}</version>
         </dependency>
-        <!--	<dependency>
-                <groupId>eu.europa.ec.fisheries.uvms</groupId>
-                <artifactId>uvms-commons</artifactId>
-        </dependency>-->
+        
 
-        <!--
-                        <dependency>
-                                <groupId>com.vividsolutions</groupId>
-                                <artifactId>jts</artifactId>
-                        </dependency>
-        -->
+        
 
-        <!--	<dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-        </dependency>-->
+        
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -199,22 +188,15 @@
             <version>${resteasy.version}</version>
         </dependency>
 
-        <!--FIXME
-                This dependency needs to be removed and to use either REST or JMS calls instead.
-                Be aware that USM services could be running on a different physical machine from the module that is dependent on usm4uvms.
-        -->
+        
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.user</groupId>
             <artifactId>user-model</artifactId>
             <version>${user.service.version}</version>
         </dependency>
 
-        <!-- to be removed since we will use user-model instead-->
-        <!--<dependency>
-                <groupId>eu.europa.ec.mare.usm</groupId>
-                <artifactId>Information-Service</artifactId>
-                <version>${information.service.version}</version>
-        </dependency>-->
+        
+        
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -254,7 +236,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <exclude>**/*ITest.java</exclude><!--execute this test manually for the time being-->
+                        <exclude>**/*ITest.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
