--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.2-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
     <properties>
-        <release.branch.name>uvms-2.0.0-durin</release.branch.name>
+        <release.branch.name>uvms-2.0.1-elrond</release.branch.name>
         <user.service.version>1.2.0</user.service.version>
         <information.service.version>1.8.0</information.service.version>
         <javaee.version>7.0</javaee.version>
@@ -29,7 +29,7 @@
         <commons.io.version>2.4</commons.io.version>
         <mockito.version>1.10.19</mockito.version>
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-        <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
+        <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
     </properties>
