--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <description>USM integration for UnionVMS.</description>
 
     <properties>
-        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
+        <release.branch.name>uvms-git-test2</release.branch.name>
         <user.service.version>1.2.0</user.service.version>
         <information.service.version>1.8.0</information.service.version>
         <javaee.version>7.0</javaee.version>
