--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.15-SNAPSHOT</version>
+    <version>2.0.15</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
@@ -48,7 +48,7 @@
     </distributionManagement>
 
     <scm>
-        <developerConnection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/${release.branch.name}/Libraries/usm4uvms</developerConnection>
+        <developerConnection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/usm4uvms/usm4uvms-2.0.15</developerConnection>
     </scm>
 
     <dependencies>
