--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.15-SNAPSHOT</version>
+    <version>2.0.15</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
