Updated version numbers. Changes are api breaking.

--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,15 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.16-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
     <properties>
         <release.branch.name>uvms-2.0.6-kili</release.branch.name>
-        <user.service.version>2.0.0</user.service.version>
         <information.service.version>1.8.0</information.service.version>
         <javaee.version>7.0</javaee.version>
         <jjwt.version>0.4</jjwt.version>
-        <uvms.commons.version>2.0.13-SNAPSHOT</uvms.commons.version>
         <ehcache.version>2.10.1</ehcache.version>
         <apache.commons.version>3.4</apache.commons.version>
         <jackson.version>2.6.0</jackson.version>
@@ -31,6 +29,10 @@
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
+
+        <user.service.version>2.0.0</user.service.version>
+        <uvms.commons.version>2.0.12</uvms.commons.version>
+
         <project.scm.id>github</project.scm.id>
     </properties>
 
