--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <description>USM integration for UnionVMS.</description>
 
     <properties>
-        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
+        <release.branch.name>uvms-2.1.3-morgoth</release.branch.name>
         <javaee.version>7.0</javaee.version>
         <jjwt.version>0.4</jjwt.version>
         <ehcache.version>2.10.1</ehcache.version>
