--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>2.1.2</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
@@ -58,7 +58,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-USM4UVMSLibrary.git</connection>
-      <tag>HEAD</tag>
+      <tag>usm4uvms-2.1.2</tag>
   </scm>
 
     <dependencies>
