--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>usm4uvms</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.4-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>usm4uvms</name>
     <description>USM integration for UnionVMS.</description>
 
@@ -31,7 +31,7 @@
         <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
         <usm.JWTokenHandler.version>2.1.1</usm.JWTokenHandler.version>
         <user.service.version>2.0.0</user.service.version>
-        <uvms.commons.version>2.0.13</uvms.commons.version>
+        <uvms.commons.version>2.0.14-SNAPSHOT</uvms.commons.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
