--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <description>USM integration for UnionVMS.</description>
 
     <properties>
-        <release.branch.name>uvms-2.1.3-morgoth</release.branch.name>
+        <release.branch.name>uvms-3.0.0-boba-fett</release.branch.name>
         <information.service.version>1.8.0</information.service.version>
         <javaee.version>7.0</javaee.version>
         <jjwt.version>0.4</jjwt.version>
@@ -31,7 +31,7 @@
         <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
         <usm.JWTokenHandler.version>2.1.1</usm.JWTokenHandler.version>
         <user.service.version>2.0.0</user.service.version>
-        <uvms.commons.version>2.0.14-SNAPSHOT</uvms.commons.version>
+        <uvms.commons.version>2.0.14</uvms.commons.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -92,7 +92,7 @@
 
         <properties>
             <scm.connection>scm:git:https://emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-usm4uvmslibrary.git</scm.connection>
-        </properties>
+        <release.branch.name>uvms-3.0.0-boba-fett</release.branch.name></properties>
     </profile>
 
 </profiles>
@@ -352,7 +352,7 @@
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
-                        <!-- This id must match the -Prelease-profile id value or else sources will be "uploaded" twice, which causes Nexus to fail -->
+                        
                         <id>attach-sources</id>
                         <goals>
                             <goal>jar</goal>
