--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
         <usm.JWTokenHandler.version>2.1.1</usm.JWTokenHandler.version>
+        <uvms-wildfly-weblogic-convertor>1.6.0</uvms-wildfly-weblogic-convertor>		
     </properties>
 
     <distributionManagement>
