[UNIONVMS-1831] updated sources

--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,7 @@
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>uvms-commons</artifactId>
             <version>${uvms.commons.version}</version>
+			<optional>true</optional>										
         </dependency>
         <dependency>
             <groupId>eu.europa.ec.mare.usm</groupId>
@@ -283,8 +284,15 @@
 						   </executions>
 						 </plugin>					
                 </plugins>
-            </build>
-
+            </build>			
+			<dependencies>				
+				<dependency>
+					<groupId>eu.europa.ec.fisheries.uvms</groupId>
+					<artifactId>uvms-commons</artifactId>
+					<version>${uvms.commons.version}</version>
+					<classifier>weblogic</classifier>
+				</dependency>									
+			</dependencies>				
         </profile>			
     </profiles>
 
