[UNIONVMS-1831] updated sources

--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,7 @@
 		<profile>
             <id>weblogic-activemq</id>
 				<properties>
+					<archive.classifier>weblogic-activemq</archive.classifier> 				
 				</properties>				
             <build>
                 <plugins>
@@ -298,9 +299,25 @@
 		<profile>
             <id>weblogic-weblogic</id>
 				<properties>
+					<archive.classifier>weblogic-weblogic</archive.classifier> 				
 				</properties>				
             <build>
                 <plugins>
+				
+				  <plugin>
+                      <groupId>eu.europa.ec.fisheries.uvms.containerconversion</groupId>
+                      <artifactId>uvms-wildfly-weblogic-convertor</artifactId>
+                      <version>${uvms-wildfly-weblogic-convertor}</version>
+                      <executions>
+					  <execution>
+						<phase>process-resources</phase>
+						<goals>
+						  <goal>convertUSM4UVMS</goal>
+						</goals>
+					  </execution>
+					</executions>
+				  </plugin>					
+				
 					<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
 						   <executions>
