--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
             </distributionManagement>
 
             <properties>
-                <connection>scm:git:https://emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-usm4uvmslibrary.git</connection>
+                <scm.connection>scm:git:https://emserveje@webgate.ec.europa.eu/CITnet/stash/scm/unionvms/uvms-usm4uvmslibrary.git</scm.connection>
             </properties>
         </profile>
         <profile>
